--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,10 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+
+<h3>Pokemon</h3>
+<% @trainer.pokemons.each do |pokemon| %>
+  <%= image_tag("pokemon/#{pokemon.ndex}.png") if pokemon.ndex %>
+  <p>Name: <%= pokemon.name if pokemon.name %></p>
+  <p>Level: <%= pokemon.level if pokemon.level %></p>
+<% end %>
