--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -2,11 +2,18 @@
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
 
-<h3>Pokemon</h3>
+<% if @trainer.pokemons != [] %>
+  <h3>Pokemon</h3>
+<% end %>
+
 <% @trainer.pokemons.each do |pokemon| %>
   <%= image_tag("pokemon/#{pokemon.ndex}.png") if pokemon.ndex %>
   <p>Name: <%= pokemon.name if pokemon.name %></p>
   <p>Level: <%= pokemon.level if pokemon.level %></p>
   <p>Health: <%= pokemon.health if pokemon.health %></p>
   <%= button_to "Damage!", damage_path(id: pokemon), :class => "button medium", :method => :patch %>
+<% end %>
+
+<% if @trainer == current_trainer %>
+  <%= button_to "Create More Pokemon!", new_path, :class => "button large", :method => :get %>
 <% end %>
